syntax = "proto3";

package user.v1;

option go_package = "user/v1;userv1";

message User {
  string id = 1;
  string username = 2;
  string role = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

message CreateUserRequest {
  string username = 1;
  string hashed_password = 2;
  string role = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
  string hashed_password = 2;
}